# morph

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  ExceptionGranted.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  morph-build.yml
docs/: README.md  package.json  quartz.config.ts  quartz.layout.ts
docs/content/: Scratch.md  glossary.md  index.md  play.html
docs/content/.obsidian/: app.json  appearance.json  hotkeys.json
docs/content/Design/: MG.md  MIS.md
docs/content/DevelopmentPlan/: DevelopmentPlan.md  python-style.md  style.md
docs/content/HazardAnalysis/: HazardAnalysis.md
docs/content/ProblemStatementAndGoals/: ProblemStatement.md
docs/content/ReflectAndTrace/: ReflectAndTrace.md
docs/content/SRS/: SRS.md
docs/content/UsabilityTesting/: UsabilityTest.md
docs/content/UserGuide/: UserGuide.md
docs/content/UsibilityTesting/: UsibilityTest.md
docs/content/VnVPlan/: VnVPlan.md
docs/content/VnVReport/: VnVReport.md
docs/content/meetings/: 10-05-2024.md  index.md
docs/content/projMngmnt/: Final_Team_Contrib.md  Rev0_Team_Contrib.md
docs/quartz/components/: ContentMeta.tsx
docs/quartz/components/styles/: author.scss
docs/quartz/styles/: links.scss
python/asteraceae/: .bentoignore  Makefile  README.md  SYSTEM_PROMPT.md  TOOL_CALLING.md  deploy.yaml  protocol.py  pyproject.toml  requirements.txt  sendoff.sh  service.py  swarm.sh
python/asteraceae/libs/: helpers.py  protocol.py
python/asteraceae/tests/: conftest.py  test_asgi.py
python/embeddings/: Notes.txt  Text.md  bento_service.py  embeddings.py  index_manager.py  storage.py
python/exo/: pyproject.toml
python/search/: app.py  bento_service.py  index_manager.py  indexes_test.py  notes_test.py  service_test.py  storage.py  storage_test.py
