[project]
name = 'asteraceae-inference-api'
description = "morph inference backend with LLMs and embeddings and thinking and structured outputs and steering vectors and the whole lot."
readme = "README.md"
version = "25.0.0"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
dependencies = [
  "huggingface-hub>=0.25.0",
  "transformers",
  "vllm==0.8.2",
  "bentoml>=1.4.6",
  "openai>=1.67.0",
  "jinja2",
  "kantoku>=0.18.1",
  "goodfire>=0.3.4",
  "llama-index>=0.12.25",
  "llama-index-vector-stores-hnswlib>=0.3.0",
  "hnswlib>=0.8.0",
]
[project.urls]
Website = "https://morph-editor.app"
Documentation = "https://tinymorph.aarnphm.xyz"
GitHub = "https://github.com/aarnphm/morph"
Twitter = "https://twitter.com/aarnphm_"
Tracker = "https://github.com/aarnphm/morph/issues"

[tool.bentoml.build]
service = "service.py:API"
include = ["LICENCE", "*.py", "*.yaml", "*.txt", "*.md", "*.json"]

[tool.uv]
dev-dependencies = [
  "nnsight>=0.3.5",
  "sae-lens>=0.5.0",
  "goodfire>=0.3.4",
  "jupyter>=1.1.1",
  "jupyterlab-vim>=4.1.4",
  "notebook>=7.2.2",
  "ruff>=0.9.4",
  "ipython>=8.32.0",
]
